issue 181 - Print for "All" and "Date" wise agenda fixed. Alignment changes fixed CSC and Client Image changes fixed.

--- a/public/assets/w/styles/userpicker.css
+++ b/public/assets/w/styles/userpicker.css
@@ -149,3 +149,7 @@
   padding-left: 0px;
 }
 /*** bucketization css End***/
+/* print btn css */
+.printbtn{
+    margin-right: 15px;
+}
